# tango-icons

./: LICENSE  Makefile  README.md  pyproject.toml
src/: licenses.md  licenses.tex  package.sh  tango-icon-theme
src/tango-icons/: README.md  README_soonTM.md  dtx.jinja  generate.py  ins.jinja
src/wiki-tango-icons/: README.md
