[tool.poetry]
name = "tango-icons"
version = "0.1.0"
description = ""
authors = ["Jost Rossel <jost@the-rossels.de>", "Joachim Neu <jneu@stanford.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.pylint.messages_control]
disable = "C0330, C0326, E1136, too-many-arguments"

[tool.pylint.format]
max-line-length = "100"
